--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.fcstd1
 PCBs/Encoder/Encoder.kicad_pcb-bak
 PCBs/Encoder/Encoder.sch-bak
+PCBs/Magnetic_Switch/Magnetic_Switch.kicad_pcb-bak
+PCBs/Magnetic_Switch/Magnetic_Switch.sch-bak
